--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <!-- <h4>Cut the Crap. Simple & Private.</h4> -->
 
-  <div class="container">
+  <div class="container" id="home">
     <div class="bottom">
       <img src="/images/google.svg" alt="" height="20px">
       <img src="/images/facebook.svg" alt="" height="20px">
@@ -75,6 +75,7 @@
       the original string.
       The most popular use for hashing is the implementation of hash tables. A hash table stores key and value pairs in
       a list that is accessible through its index. </p>
+    <button> <a href="#home">Back to Top</button></a>
   </div>
 
   <!-- <footer>
