--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </div>
 
   <div class="container" id="info">
-    <h1>Why we use Location data for Hashing</h1>
+    <h1>What is Location Data Hashing</h1>
     <p>Hashing is the process of transforming any given key or a string of characters into another value. This is
       usually represented by a shorter, fixed-length value or key that represents and makes it easier to find or employ
       the original string.
@@ -78,16 +78,7 @@
     <button> <a href="#home">Back to Top</button></a>
   </div>
 
-  <!-- <footer>
-
-    <div class="icons">
-      <i class="ri-home-fill"></i>
-      <i class="ri-settings-2-line"></i>
-      <i class="ri-user-line"></i>
-    </div>
-  </footer> -->
-
-
+  <script src="https://cdn.jsdelivr.net/npm/@simondmc/popup-js@1.4.2/popup.min.js"></script>
   <script src="app.js"></script>
   <script src="/client.js"></script>
 </body>
