--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <div class="file-info">
       <!-- <i class="ri-folder-image-line"></i> -->
       <i class="ri-lock-line"></i>
-
       <!-- <img src="/images/document-lock-svgrepo-com.svg" alt="" height="80px"> -->
-      <p>Encrypted File</p>
+      <p>Send the Code/ Screenshot below to Sender</p>
+      <i class="ri-arrow-down-line"></i>
     </div>
 
     <!-- <p>Click to Download</p> -->
@@ -45,7 +45,7 @@
     <!-- <a href="#" onclick="getLocation()"><button>Download<i class="ri-download-line"></i></a></button> -->
 
 
-    <a href="#" onclick="getLocation()"><button>View Hash Key</button></a>
+    <a href="#" onclick="getLocation()" id="sendBtn"><button>View Hash Key</button></a>
 
 
     <!-- <div class="download-issues">
