--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <button class=""> <i class="ri-map-pin-2-fill"></i></button>
       <p>Why do we need <b><a href="#info"> Location</b> </a>for Encryption?</p>
     </div>
-    <p class="meta"><i class="ri-meta-fill"></i>Created by Facebook<i class="ri-heart-3-fill"></i></p>
+    <p class="meta"></i>Created with<i class="ri-heart-3-fill"></i></p>
   </div>
 
   <div class="ad">
