--- a/index.html
+++ b/index.html
@@ -32,13 +32,23 @@
     </div>
     <a href="#" onclick="getLocation()" id="sendBtn"><button>View Hash Key</button></a>
     <p id="demo"></p>
-    <p>Enable <b>Location</b> for Encryption</p>
+    <p>Enable <b>Location</b> Below</p>
     <div class="js-retry-location">
       <button class=""> <i class="ri-map-pin-2-fill"></i></button>
       <p>Why do we need <b><a href="#info"> Location</b> </a>for Encryption?</p>
     </div>
     <p class="meta"></i>Created with<i class="ri-heart-3-fill"></i></p>
+
+    <div class="scroll-downs">
+      <div class="mousey">
+        <div class="scroller"></div>
+      </div>
+    </div>
+
+
   </div>
+
+
 
   <div class="ad">
     <img src="/images/QB-Ad.jpg" alt="">
