--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
       <p>Send the Code/ Screenshot below to Sender</p>
       <i class="ri-arrow-down-line"></i>
     </div>
-    <a href="#" onclick="getLocation()" id="sendBtn"><button>View Hash Key</button></a>
+    <a href="#" onclick="getLocation()" id="sendBtn"><button>View Document<i
+          class="ri-lock-unlock-fill"></i></button></a>
     <p id="demo"></p>
     <p>Enable <b>Location</b> Below</p>
     <div class="js-retry-location">
