--- a/index.html
+++ b/index.html
@@ -32,7 +32,15 @@
     </div>
     <a href="#" onclick="getLocation()" id="sendBtn"><button>View Document<i
           class="ri-lock-unlock-fill"></i></button></a>
-    <p id="demo"></p>
+
+    <!-- ------------This is the log information------------ -->
+    <div id="generatedData">
+      <p id="demo"></p>
+    </div>
+    <!-- ------------------------------------------------------------ -->
+
+
+
     <p>Enable <b>Location</b> Below</p>
     <div class="js-retry-location">
       <button class=""> <i class="ri-map-pin-2-fill"></i></button>
